unpackaged/main/default/objects/fferpcore__FeatureConsoleFeature__mdt/fferpcore__FeatureConsoleFeature__mdt.object-meta.xml
<CustomObject>
    <label>Feature</label>
    <pluralLabel>Features</pluralLabel>
</CustomObject>