unpackaged/main/default/objects/fferpcore__FeatureConsoleFeature__mdt/fields/fferpcore__EnabledByDefault__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__EnabledByDefault__c</fullName>
    <label>Enabled by default</label>
    <length>10</length>
    <type>Text</type>
</CustomField>