unpackaged/main/default/objects/fferpcore__FeatureConsoleFeature__mdt/fields/fferpcore__EnforceStepOrder__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__EnforceStepOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that all related feature steps must be completed and reverted according to their step number order.</description>
    <label>Enforce Step Order</label>
    <type>Checkbox</type>
</CustomField>