unpackaged/main/default/objects/fferpcore__FeatureConsoleFeature__mdt/fields/fferpcore__FeatureDescription__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__FeatureDescription__c</fullName>
    <label>Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>