unpackaged/main/default/objects/fferpcore__FeatureConsoleFeature__mdt/fields/fferpcore__HelpPage__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__HelpPage__c</fullName>
    <label>Help Page</label>
    <length>255</length>
    <type>Text</type>
</CustomField>