unpackaged/main/default/objects/fferpcore__FeatureConsoleFeature__mdt/fields/fferpcore__HelpPageParams__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__HelpPageParams__c</fullName>
    <label>Help Page Params</label>
    <length>255</length>
    <type>Text</type>
</CustomField>