unpackaged/main/default/objects/fferpcore__FeatureConsoleFeature__mdt/fields/fferpcore__ToggleAttributeWhenLicensed__c.field-meta.xml
<CustomField>
    <fullName>fferpcore__ToggleAttributeWhenLicensed__c</fullName>
    <label>Toggle Attribute When Licensed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On and off</fullName>
                <default>true</default>
                <label>On and off</label>
            </value>
            <value>
                <fullName>On only</fullName>
            </value>
            <value>
                <fullName>Off only</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Hidden</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>